Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:15+0200\n"
+"PO-Revision-Date: 2010-08-20 08:16+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1548,8 +1548,8 @@ msgid ""
 "You probably did not create a configuration file. You might want to use the "
 "%1$ssetup script%2$s to create one."
 msgstr ""
-"Turbūt dar nesukūrėte nustatymų failo. Galite pasinaudoti %1$snustatymų "
-"skriptu%2$s, kad sukurtumėte failą."
+"Jūs tikriausiai nesukūrėte nustatymų (konfigūracinio) failo. Galite "
+"pasinaudoti %1$snustatymų skriptu%2$s, kad sukurtumėte failą."
 
 #: libraries/auth/config.auth.lib.php:115
 msgid ""
