--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:19+0200\n"
+"PO-Revision-Date: 2010-08-20 08:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1599,7 +1599,7 @@ msgstr "Pasirinkti serverį"
 
 #: libraries/auth/cookie.auth.lib.php:307 libraries/header.inc.php:58
 msgid "Cookies must be enabled past this point."
-msgstr "Sausainėliai(Cookies) turi būti priimami."
+msgstr "Slapukai(Cookies) turi būti priimami."
 
 #: libraries/auth/cookie.auth.lib.php:639
 #: libraries/auth/signon.auth.lib.php:180
