--- a/po/lt.po
+++ b/po/lt.po
@@ -1629,7 +1629,7 @@ msgstr "Neteisingas naudotojo vardas arba slaptažodis. Priėjimas uždraustas."
 #: libraries/auth/swekey/swekey.auth.lib.php:118
 #, php-format
 msgid "File %s does not contain any key id"
-msgstr ""
+msgstr "Failas %s neturi jokio raktinio id"
 
 #: libraries/auth/swekey/swekey.auth.lib.php:157
 #: libraries/auth/swekey/swekey.auth.lib.php:180
