Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -1642,7 +1642,7 @@ msgstr ""
 
 #: libraries/auth/swekey/swekey.auth.lib.php:202
 msgid "Authenticating..."
-msgstr ""
+msgstr "Nustatomas tapatumas..."
 
 #: libraries/blobstreaming.lib.php:241
 msgid "PBMS error"
