Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:34+0200\n"
+"PO-Revision-Date: 2010-08-20 08:35+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1727,7 +1727,7 @@ msgstr "Serveris"
 
 #: libraries/common.inc.php:806
 msgid "Invalid authentication method set in configuration:"
-msgstr ""
+msgstr "Blogai nustatytas identifikavimo metodas nustatymuose:"
 
 #: libraries/common.inc.php:908
 #, php-format
