Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:35+0200\n"
+"PO-Revision-Date: 2010-08-20 08:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1807,7 +1807,7 @@ msgstr "Patikrinti SQL užklausą"
 
 #: libraries/common.lib.php:1289
 msgid "Inline edit of this query"
-msgstr ""
+msgstr "Greitas užklausos redagavimas"
 
 #: libraries/common.lib.php:1291
 msgid "Inline"
