--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:37+0200\n"
+"PO-Revision-Date: 2010-08-20 08:38+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1891,7 +1891,7 @@ msgstr "Pabaiga"
 #: libraries/common.lib.php:2436
 #, php-format
 msgid "Jump to database &quot;%s&quot;."
-msgstr "Pereiti į &quot;%s&quot; duombazę."
+msgstr "Pereiti į „%s“ duombazę."
 
 #: libraries/common.lib.php:2455
 #, php-format
