--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:38+0200\n"
+"PO-Revision-Date: 2010-08-20 08:40+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1896,7 +1896,7 @@ msgstr "Pereiti į „%s“ duombazę."
 #: libraries/common.lib.php:2455
 #, php-format
 msgid "The %s functionality is affected by a known bug, see %s"
-msgstr ""
+msgstr "%s funkcionalumas paveiktas žinomos klaidos, žiūrėti %s"
 
 #: libraries/common.lib.php:2835 libraries/common.lib.php:2842
 #: libraries/db_links.inc.php:53 libraries/export/sql.php:24
