--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:40+0200\n"
+"PO-Revision-Date: 2010-08-20 08:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1913,7 +1913,7 @@ msgstr "Veiksmai"
 
 #: libraries/common.lib.php:2923
 msgid "Browse your computer:"
-msgstr ""
+msgstr "Naršyti savo kompiuteryje:"
 
 #: libraries/common.lib.php:2936
 #, fuzzy, php-format
