--- a/po/lt.po
+++ b/po/lt.po
@@ -2106,10 +2106,9 @@ msgid "Custom - display all possible options to configure"
 msgstr ""
 
 #: libraries/display_export.lib.php:137
-#, fuzzy
 #| msgid "Databases"
 msgid "Database(s):"
-msgstr "Duombazės"
+msgstr "Duombazė(s)"
 
 #: libraries/display_export.lib.php:139
 #| msgid "Tables"
