--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:53+0200\n"
+"PO-Revision-Date: 2010-08-20 08:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2192,7 +2192,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:284
 msgid "use this for future exports"
-msgstr ""
+msgstr "naudoti šitai ateities eksportams"
 
 #: libraries/display_export.lib.php:290 libraries/display_import.lib.php:188
 #: libraries/display_import.lib.php:201 libraries/sql_query_form.lib.php:509
