--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:54+0200\n"
+"PO-Revision-Date: 2010-08-20 08:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2241,7 +2241,7 @@ msgstr "Koduotės konvertavimas:"
 
 #: libraries/display_export.lib.php:360
 msgid "SQL compatibility mode"
-msgstr "SQL suderinamumas"
+msgstr "SQL suderinamumo režimas"
 
 #: libraries/display_import.lib.php:66
 msgid ""
