--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:55+0200\n"
+"PO-Revision-Date: 2010-08-20 09:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2249,6 +2249,9 @@ msgid ""
 "this is a known bug in webkit based (Safari, Google Chrome, Arora etc.) "
 "browsers."
 msgstr ""
+"Įkeliamas failas tikriausiai didesnis už leistiną dydį arba tai yra žinoma "
+"klaida webkit varikliu paremtose interneto naršyklėse (Safari, Google "
+"Chrome, Arora ir pan.)."
 
 #: libraries/display_import.lib.php:76
 msgid "The file is being processed, please be patient."
