Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:04+0200\n"
+"PO-Revision-Date: 2010-08-20 09:05+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2264,10 +2264,9 @@ msgid ""
 msgstr "Prašome palaukti, failas siunčiamas. Informacijos apie siuntimą nėra."
 
 #: libraries/display_import.lib.php:129
-#, fuzzy
 #| msgid "Cannot log in to the MySQL server"
 msgid "Importing into the current server"
-msgstr "Nepavyksta prisijungti prie MySQL darbinės stoties"
+msgstr "Importuojama į šį serverį"
 
 #: libraries/display_import.lib.php:131
 #, fuzzy, php-format
