--- a/po/lt.po
+++ b/po/lt.po
@@ -2269,10 +2269,10 @@ msgid "Importing into the current server"
 msgstr "Importuojama į šį serverį"
 
 #: libraries/display_import.lib.php:131
-#, fuzzy, php-format
+#, php-format
 #| msgid "Go to database"
 msgid "Importing into the database \"%s\""
-msgstr "Eiti į duomenų bazę"
+msgstr "Importuojama į duombazę „%s“"
 
 #: libraries/display_import.lib.php:133
 #, fuzzy, php-format
