Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:10+0200\n"
+"PO-Revision-Date: 2010-08-20 09:16+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2312,6 +2312,8 @@ msgstr "Dalinis importavimas:"
 msgid ""
 "Previous import timed out, after resubmitting will continue from position %d."
 msgstr ""
+"Ankstesnio importavimo laikas baigėsi, po pakartotino to pačio išsiuntimo "
+"bus tęsiama nuo %d."
 
 #: libraries/display_import.lib.php:221
 #, fuzzy
