--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:18+0200\n"
+"PO-Revision-Date: 2010-08-20 09:19+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2357,7 +2357,7 @@ msgstr "rodyti visas lenteles vienodo pločio?"
 
 #: libraries/display_pdf_schema.lib.php:46
 msgid "Only show keys"
-msgstr ""
+msgstr "Rodyti tik raktus"
 
 #: libraries/display_pdf_schema.lib.php:48
 msgid "Data Dictionary Format"
