Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:20+0200\n"
+"PO-Revision-Date: 2010-08-20 09:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2454,7 +2454,7 @@ msgstr "Ryšių schema"
 
 #: libraries/display_tbl.lib.php:593
 msgid "Show binary contents"
-msgstr ""
+msgstr "Rodyti dvejetainį turinį"
 
 #: libraries/display_tbl.lib.php:595
 msgid "Show BLOB contents"
