--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:21+0200\n"
+"PO-Revision-Date: 2010-08-20 09:22+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2462,7 +2462,7 @@ msgstr "Rodyti BLOB turinį"
 
 #: libraries/display_tbl.lib.php:597
 msgid "Show binary contents as HEX"
-msgstr ""
+msgstr "Rodyti dvejetainį turinį kaip HEX (šešioliktainį)"
 
 #: libraries/display_tbl.lib.php:605 pmd_general.php:140 tbl_change.php:307
 #: tbl_change.php:313
