Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:24+0200\n"
+"PO-Revision-Date: 2010-08-20 09:26+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2626,7 +2626,7 @@ msgstr ""
 
 #: libraries/engines/innodb.lib.php:246
 msgid "Write waits"
-msgstr ""
+msgstr "Rašymas laukia"
 
 #: libraries/engines/innodb.lib.php:252
 msgid "Read misses in %"
