Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:26+0200\n"
+"PO-Revision-Date: 2010-08-20 09:28+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2941,10 +2941,9 @@ msgstr ""
 #: libraries/export/ods.php:24 libraries/export/odt.php:57
 #: libraries/export/texytext.php:27 libraries/export/xls.php:24
 #: libraries/export/xlsx.php:24
-#, fuzzy
 #| msgid "Put fields names in the first row"
 msgid "Put columns names in the first row"
-msgstr "Stulpelių pavadinimus įrašyti pirmoje eilutėje"
+msgstr "Stulpelių pavadinimus įrašyti pirmame įraše (eilutėje)"
 
 #: libraries/export/excel.php:17
 msgid "CSV for MS Excel"
