--- a/po/lt.po
+++ b/po/lt.po
@@ -2968,9 +2968,8 @@ msgstr "Parodyti lentelę"
 #: libraries/export/htmlword.php:24 libraries/export/latex.php:41
 #: libraries/export/odt.php:33 libraries/export/sql.php:79
 #: libraries/export/texytext.php:23 libraries/import.lib.php:1141
-#, fuzzy
 msgid "structure"
-msgstr "Struktūra"
+msgstr "struktūra"
 
 #: libraries/export/htmlword.php:24 libraries/export/latex.php:41
 #: libraries/export/odt.php:33 libraries/export/sql.php:79
