--- a/po/lt.po
+++ b/po/lt.po
@@ -3002,10 +3002,9 @@ msgid "Table structure for table"
 msgstr "Sukurta duomenų struktūra lentelei"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Lentelės __TABLE__ turinys"
+msgstr "Lentelės @TABLE@ turinys"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
