--- a/po/lt.po
+++ b/po/lt.po
@@ -3055,10 +3055,9 @@ msgstr "Rodyti komentarus"
 
 #: libraries/export/latex.php:62 libraries/export/odt.php:48
 #: libraries/export/sql.php:44
-#, fuzzy
 #| msgid "Available MIME types"
 msgid "Display MIME types"
-msgstr "Galimi MIME-tipai"
+msgstr "Rodyti MIME-tipai"
 
 #: libraries/export/latex.php:139 libraries/export/sql.php:281
 #: libraries/export/xml.php:105 libraries/header_printview.inc.php:56
