--- a/po/lt.po
+++ b/po/lt.po
@@ -3170,10 +3170,9 @@ msgid "Add %s statement"
 msgstr "Įtraukti %s teiginį (sakinį)"
 
 #: libraries/export/sql.php:91
-#, fuzzy
 #| msgid "Statements"
 msgid "Add statements:"
-msgstr "Parametrai"
+msgstr "Pridėti teiginį (sakinį):"
 
 #: libraries/export/sql.php:111
 msgid "<code>CREATE TABLE</code> options:"
