--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:54+0200\n"
+"PO-Revision-Date: 2010-08-20 09:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3325,9 +3325,8 @@ msgid "Views"
 msgstr "Rodinys (Views)"
 
 #: libraries/export/xml.php:47
-#, fuzzy
 msgid "Export contents"
-msgstr "Eksportuoti funkcijas"
+msgstr "Eksportuoti turinį"
 
 #: libraries/footer.inc.php:180 libraries/footer.inc.php:191
 #: libraries/footer.inc.php:194
