Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 09:55+0200\n"
+"PO-Revision-Date: 2010-08-20 09:57+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3353,7 +3353,7 @@ msgstr "MySQL gražino tuščią rezultatų rinkinį (nėra eilučių)."
 #: libraries/import.lib.php:1110
 msgid ""
 "The following structures have either been created or altered. Here you can:"
-msgstr ""
+msgstr "Sekanti struktūra buvo sukurta arba pakeista. Čia galite:"
 
 #: libraries/import.lib.php:1111
 msgid "View a structure`s contents by clicking on its name"
